add DATABASE env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=literalura
-spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/literalura_db
+spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/${DB_DATABASE}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
